src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>AccountType</label>
        <picklist>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BuildingPlots__c</fullName>
        <label>BuildingPlots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <label>CreditLimit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWDArea__c</fullName>
        <label>DWDArea</label>
        <picklist>
            <picklistValues>
                <fullName>Bayern Nord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baden-Württemberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westfalen/Niedersachsen Ost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheinland-Pfalz/Saarland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westfalen/Ruhrgebiet/OWL/Emsland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hessen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordrhein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HH/SH/HB/NS(ohne Emsland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baden Württemberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sachsen /Thüringen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin/Brandenburg Nordost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sachsen/Thüringen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HH/SH/HB/NS Nord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheinland-Pfalz / Saarland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayern Süd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin / Brandenburg Nordost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <formula>PlannedVisit__c  -  ExecutedVisit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DynamicField__c</fullName>
        <label>DynamicField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EWAquaDrinkBlock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWAquaDrinkBlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EWControlSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWControlSystem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EWDWDBrandBlock__c</fullName>
        <label>EWDWDBrandBlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EWNWBlock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWNWBlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EWShelvesWaterWithoutCO2__c</fullName>
        <label>EWShelvesWaterWithoutCO2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutedVisit__c</fullName>
        <label>ExecutedVisit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLocations__c</fullName>
        <label>GeoLocations</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>InstructionForm__c</fullName>
        <label>InstructionForm</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRANCHISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SELBSTÄNDIG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MWBoxFacingsAFGTotal__c</fullName>
        <label>MWBoxFacingsAFGTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MWBoxFacingsWaterWithoutCO2__c</fullName>
        <label>MWBoxFacingsWaterWithoutCO2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarketArea__c</fullName>
        <label>MarketArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiplacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIELSEN__c</fullName>
        <label>NIELSEN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NationalHeadquarters__c</fullName>
        <label>NationalHeadquarters</label>
        <picklist>
            <picklistValues>
                <fullName>Coca-Cola (d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGV Profi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edeka-Gruppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edeka ZAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gedelfi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEDIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEFAKO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GES Nürnberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEVA Frechen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GVG-Getr-Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKANT D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raiffeisen DRWZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewe-Gruppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schwarz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAR-Gruppe D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sügesco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tengelmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tengelmann D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinks-Gruppe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfFacingsGesNearwater__c</fullName>
        <label>NumberOfFacingsGesNearwater</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFacingsGesWater__c</fullName>
        <label>NumberOfFacingsGesWater</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <label>Outlet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlacementOpportunities__c</fullName>
        <label>PlacementOpportunities</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PlannedVisit__c</fullName>
        <label>PlannedVisit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rowguid__c</fullName>
        <label>Rowguid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <label>SalesType</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TDNo__c</fullName>
        <label>TDNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMSNo__c</fullName>
        <label>TMSNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamCoordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamCoordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TelVorw__c</fullName>
        <label>TelVorw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradePrivateCooler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TradePrivateCooler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueAccountName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueAccountName</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VisitScore__c</fullName>
        <label>VisitScore</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AvoidSpecialCharacter</fullName>
        <active>false</active>
        <errorConditionFormula>Not(REGEX(Name,&quot;(([a-zA-z]{1}\\s)([a-zA-z0-9\\s]{0,}))+&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Special characters are not allowed</errorMessage>
    </validationRules>
</CustomObject>